Fix overflow of board when viewport of 320 x 640

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -30,8 +30,8 @@ ul {
 }
 
 button {
-  width: 3.75rem;
-  height: 3.75rem;
+  width: 2.625rem;
+  height: 2.625rem;
 }
 
 .root {
